--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
 		"@material/typography": "^14.0.0",
 		"@playwright/test": "^1.28.1",
 		"@smui/banner": "7.0.0-beta.0",
+		"@smui/button": "7.0.0-beta.9",
 		"@smui/card": "7.0.0-beta.0",
 		"@smui/common": "7.0.0-beta.0",
 		"@smui/layout-grid": "7.0.0-beta.0",
 		"@smui/paper": "7.0.0-beta.0",
 		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/kit": "^1.20.4",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
+		"prettier-plugin-svelte": "^2.10.1",
 		"smui-theme": "7.0.0-beta.0",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
-		"typescript": "^4.9.3",
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.4.3",
+		"typescript": "^5.0.0",
 		"vite": "^4.0.0"
 	},
 	"type": "module",
