--- a/package.json
+++ b/package.json
@@ -14,28 +14,29 @@
 	},
 	"devDependencies": {
 		"@material/typography": "^14.0.0",
-		"@playwright/test": "^1.28.1",
-		"@smui/banner": "7.0.0-beta.0",
-		"@smui/button": "7.0.0-beta.9",
-		"@smui/card": "7.0.0-beta.0",
-		"@smui/common": "7.0.0-beta.0",
-		"@smui/layout-grid": "7.0.0-beta.0",
-		"@smui/paper": "7.0.0-beta.0",
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.0",
+		"@playwright/test": "^1.39.0",
+		"@smui/banner": "7.0.0-beta.15",
+		"@smui/button": "7.0.0-beta.15",
+		"@smui/card": "7.0.0-beta.15",
+		"@smui/common": "7.0.0-beta.15",
+		"@smui/layout-grid": "7.0.0-beta.15",
+		"@smui/paper": "7.0.0-beta.15",
+		"@sveltejs/adapter-auto": "^1.0.3",
+		"@sveltejs/kit": "^1.27.3",
+		"eslint": "^8.53.0",
+		"eslint-config-prettier": "^8.10.0",
+		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"smui-theme": "7.0.0-beta.0",
-		"svelte": "^4.0.0",
-		"svelte-check": "^3.4.3",
-		"typescript": "^5.0.0",
-		"vite": "^4.0.0"
+		"svelte": "^4.2.2",
+		"svelte-check": "^3.5.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.5.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-cloudflare": "^2.3.3",
+		"eslint-plugin-svelte": "^2.34.1",
 		"svelte-material-ui": "7.0.0-beta.0"
 	}
 }
